# mirror-alvar

./: CMakeLists.txt
src/platform/: CMakeLists.txt
src/platform/capture_plugin_blackmagic/: CMakeLists.txt  CapturePluginBlackMagic.cpp  CapturePluginBlackMagic.h  cameradecklink.cpp  cameradecklink.h
